@@ -12,6 +12,10 @@
     src/cmd/cmd_part.c, src/cmd/cmd_pod.c, src/cmd/cmd_shell.c,
     src/cmd/cmd_svf.c, src/cmd/cmd_writemem.c: Add completion handlers.
 
+  * include/urjtag/flash.h, src/flash/detectflash.c: Turn flash detection
+    handling into an array to make adding new routines easy.  Patch by
+    Jonathan Stroud.
+
 2011-07-06  Jie Zhang  <jie.zhang@analog.com>
 
   * src/tap/chain.c (urj_tap_chain_connect): Correct checking of the
